--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="Espacio-Container">
         <div class="BotonCargar-Container">
             <div class="col-auto">
-                <button type="submit" class="btn btn-outline-secondary mb-3">Cargar Archivo .txt</button>
+                <button type="submit" class="btn btn-outline-info mb-3">Cargar Archivo .txt</button>
             </div>
         </div>
         <form class="row g-3" style="display: flex; justify-content: center; align-items: center; position: relative; bottom:11px;">
@@ -30,6 +30,12 @@
             <div class="col-auto" style="position: relative; top: 8px;">
                 <button type="submit" class="btn btn-primary mb-3">Buscar</button>
             </div>
+            <div class="col-auto" style="position: relative; top: 8px;">
+                <button type="submit" class="btn btn-warning mb-3">Insertar nuevo registro</button>
+            </div>
+            <div class="col-auto" style="position: relative; top: 8px;">
+                <button type="submit" class="btn btn-success mb-3">Generar arhivo .txt</button>
+            </div>
         </form>
         <div class="EspacioTabla-Container">
             <div class="Tabla-Container">
@@ -45,18 +51,16 @@
                             Apellido
                         </div>
                         <div class="col">
-                            Fecha
+                            SUB
                         </div>
                         <div class="col">
-                            Motivo
+                            Monto
+                        </div>
+                        <div class="col">
+                            Fecha
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div>
-            <div>
-
             </div>
         </div>
     </div>
