--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="Espacio-Container">
         <div class="BotonCargar-Container">
             <div class="col-auto">
-                <button type="submit" class="btn btn-outline-info mb-3">Cargar Archivo .txt</button>
+                <input type="file" class="btn btn-outline-info mb-3">Cargar Archivo .txt</">
             </div>
         </div>
         <form class="row g-3" style="display: flex; justify-content: center; align-items: center; position: relative; bottom:11px;">
