--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Inicio";
+﻿@model ClassAdd
+@{
+    ViewData["Title"] = "Incluidos";
 }
 
 <div class="text-center">
@@ -16,15 +17,15 @@
                 <label readonly class="form-control-plaintext" id="LabelBuscar1" value="Buscar por: ">Buscar por:</label>
             </div>
             <div class="col-auto">
-                <label for="LabelNumber2" class="visually-hidden">Cedula</label>
+                <label asp-for="CedulaApp" class="visually-hidden">Cedula</label>
                 <input type="number" class="form-control" id="inputNumber2" placeholder="Cedula">
             </div>
             <div class="col-auto">
-                <label for="LabelNombre2" class="visually-hidden">Nombre</label>
+                <label asp-for="Nombre" class="visually-hidden">Nombre</label>
                 <input type="text" class="form-control" id="inputNombre2" placeholder="Nombre">
             </div>
             <div class="col-auto">
-                <label for="LabelApellido2" class="visually-hidden">Apellido</label>
+                <label asp-for="Apellido" class="visually-hidden">Apellido</label>
                 <input type="text" class="form-control" id="inputApellido2" placeholder="Apellido">
             </div>
             <div class="col-auto" style="position: relative; top: 8px;">
@@ -42,22 +43,22 @@
                 <div class="container text-center" style="border: 1px solid black; border-collapse: collapse; border-right: 1px solid black; padding: 15px;" >
                     <div class="row align-items-start" style="font-size:larger">
                         <div class="col">
-                            Cedula
+                            <label asp-for="CedulaApp">Cedula</label>
                         </div>
                         <div class="col">
-                            Nombre
+                            <label asp-for="Nombre">Nombre</label>
                         </div>
                         <div class="col">
-                            Apellido
+                            <label asp-for="Apellido">Apellido</label>
                         </div>
                         <div class="col">
-                            SUB
+                            <label asp-for="Sub">Sub</label>
                         </div>
                         <div class="col">
-                            Monto
+                            <label asp-for="Monto">Monto</label>
                         </div>
                         <div class="col">
-                            Fecha
+                            <label asp-for="Fecha">Fecha</label>
                         </div>
                     </div>
                 </div>
