--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,59 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿@model Excluidos
 
-<p>Use this page to detail your site's privacy policy.</p>
+@{
+    ViewData["Title"] = "Excluidos";
+}
+<div class="text-center">
+    <h1 class="display-4">@ViewData["Title"]</h1>
+    <div class="Espacio-Container">
+        <div class="BotonCargar-Container">
+            <div class="col-auto">
+                <input type="file" class="btn btn-outline-info mb-3">Cargar Archivo .txt</">
+            </div>
+        </div>
+        <form class="row g-3" style="display: flex; justify-content: center; align-items: center; position: relative; bottom:11px;">
+            <div class="col-auto">
+                <label for="LabelBuscar2" class="visually-hidden">Buscar por: </label>
+                <label readonly class="form-control-plaintext" id="LabelBuscar1" value="Buscar por: ">Buscar por:</label>
+            </div>
+            <div class="col-auto">
+                <label asp-for="Cedula" class="visually-hidden">Cedula</label>
+                <input type="number" class="form-control" id="inputNumber2" placeholder="Cedula">
+            </div>
+            <div class="col-auto">
+                <label asp-for="Motivo" class="visually-hidden">Motivo</label>
+                <input type="text" class="form-control" id="inputNombre2" placeholder="Motivo">
+            </div>
+            <div class="col-auto">
+                <label asp-for="Fecha" class="visually-hidden">Fecha</label>
+                <input type="text" class="form-control" id="inputApellido2" placeholder="Fecha">
+            </div>
+            <div class="col-auto" style="position: relative; top: 8px;">
+                <button type="submit" class="btn btn-primary mb-3">Buscar</button>
+            </div>
+            <div class="col-auto" style="position: relative; top: 8px;">
+                <button type="submit" class="btn btn-warning mb-3">Insertar nuevo registro</button>
+            </div>
+            <div class="col-auto" style="position: relative; top: 8px;">
+                <button type="submit" class="btn btn-success mb-3">Generar arhivo .txt</button>
+            </div>
+        </form>
+        <div class="EspacioTabla-Container">
+            <div class="Tabla-Container">
+                <div class="container text-center" style="border: 1px solid black; border-collapse: collapse; border-right: 1px solid black; padding: 15px;">
+                    <div class="row align-items-start" style="font-size:larger">
+                        <div class="col">
+                            <label asp-for="Cedula">Cedula</label>
+                        </div>
+                        <div class="col">
+                            <label asp-for="Motivo">Motivo</label>
+                        </div>
+                        <div class="col">
+                            <label asp-for="Fecha">Fecha</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
