--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -93,6 +93,7 @@
                                 <td>@item.Fecha_add</td>
                                 <td>
                                     <a asp-action="Editar" asp-controller="MantenedorIncluidos" class="btn btn-outline-success btn-sm" asp-route-id_add="@item.Id_add">Editar</a>
+                                    <a asp-action="Eliminar" asp-controller="MantenedorIncluidos" class="btn btn-outline-success btn-sm" asp-route-id_add="@item.Id_add">Eliminar</a>
                                 </td>
 
                             </tr>
