--- a/Views/MantenedorIncluidos/Guardar.cshtml
+++ b/Views/MantenedorIncluidos/Guardar.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Formulario para Incluidos";
 }
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="text-align:center; font-size: 25px;">
     <div class="card-header">
         Formulario para Incluidos
     </div>
@@ -34,7 +34,7 @@
         <label class="exampleInputEmail1">Introduzca la Fecha</label>
         <input asp-for="Fecha_add" type="text" class="form-control">
     </div>
-    <button type="submit" class="btn btn-primary">Guardar</button>
-    <button class="btn btn-warning" asp-action="Listar">Volver a la lista</button>
+    <button type="submit" class="btn btn-primary" style="text-decoration:none; position: relative; top:5px;">Guardar</button>
+    <button class="btn btn-warning" asp-action="Listar" style="text-decoration:none; position: relative; top:5px;">Volver a la lista</button>
 </form>
 
