--- a/Views/MantenedorExcluidos/Listar.cshtml
+++ b/Views/MantenedorExcluidos/Listar.cshtml
@@ -7,9 +7,6 @@
     <h1 class="display-4">@ViewData["Title"]</h1>
     <div class="Espacio-Container">
         <div class="BotonCargar-Container">
-            <div class="col-auto">
-                <input type="file" class="btn btn-outline-info mb-3">Cargar Archivo .txt</">
-            </div>
         </div>
         <form asp-controller="MantenedorExcluidos" method="post" class="row g-3" style="display: flex; justify-content: center; align-items: center; position: relative; bottom:11px;">
             <div class="col-auto">
@@ -26,16 +23,13 @@
             </div>
             <div class="col-auto">
                 <label for="Fecha" class="visually-hidden">Fecha</label>
-                <input type="text" class="form-control" id="inputApellido2" placeholder="Motivo">
+                <input type="text" class="form-control" id="inputApellido2" placeholder="Fecha">
             </div>
             <div class="col-auto" style="position: relative; top: 8px;">
                 <button type="submit" class="btn btn-primary mb-3">Buscar</button>
             </div>
             <div class="col-auto" style="position: relative; top: 8px;">
                 <button type="submit" class="btn btn-warning mb-3" asp-action="Guardar">Insertar nuevo registro</button>
-            </div>
-            <div class="col-auto" style="position: relative; top: 8px;">
-                <button type="submit" class="btn btn-success mb-3">Generar arhivo .txt</button>
             </div>
         </form>
         <div class="card">
@@ -63,6 +57,7 @@
                     </tbody>
                 </table>
             </div>
+            <a href="/Home/index" style="text-decoration:none; position: relative; bottom:5px;"><button class="btn btn-warning">Volver al menu principal</button></a>
         </div>
     </div>
 </div>
