--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ClassAdd
 @{
     ViewData["Title"] = "Index";
 
@@ -14,8 +14,8 @@
     <div class="Cuerpo-Container">
         <div class="Boton-IncluidoContainer">
             <div class="d-grid gap-2 col-6 mx-auto">
-                <a href="/MantenedorIncluidos/Listar" style="text-decoration:none; color:black;"><button class="btn btn-warning btn-lg">Incluidos</a></button>
-                <a href="/MantenedorExcluidos/Listar" style="text-decoration:none; color:black;"><button class="btn btn-success btn-lg">Excluidos</a></button>
+                <a href="/MantenedorIncluidos/Listar" class="btn btn-warning btn-lg">Incluidos</a>
+                <a href="/MantenedorExcluidos/Listar" class="btn btn-success btn-lg" style="color:black;">Excluidos</a>
             </div>
         </div>
     </div>
