--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -3,14 +3,22 @@
     ViewData["Title"] = "Incluidos";
 }
 
+
+<form method="post" enctype="multipart/form-data">
+
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
+    
     <div class="Espacio-Container">
         <div class="BotonCargar-Container">
             <div class="col-auto">
-                <input type="file" class="btn btn-secondary mb-3">Cargar Archivo .txt</">
+                <input type="file" class="btn btn-secondary mb-3" name="archivoTXT">Cargar Archivo .txt</">
+                <button type="submit">Subir archivo</button>
             </div>
         </div>
+    </div>
+</div>
+    </form>
         <form asp-controller="MantenedorIncluidos" method="post" class="row g-3" style="display: flex; justify-content: center; align-items: center; position: relative; bottom:11px;">
             <div class="col-auto">
                 <label for="LabelBuscar2" class="visually-hidden">Buscar por: </label>
@@ -72,5 +80,3 @@
             </div>
             <a href="/Home/index" style="text-decoration:none; text-decoration:none; position: relative; bottom:5px;"><button class="btn btn-warning">Volver al menu principal</button></a>
         </div>
-    </div>
-</div>
