Boton Eliminar Arrelgado

--- a/Views/MantenedorExcluidos/Listar.cshtml
+++ b/Views/MantenedorExcluidos/Listar.cshtml
@@ -51,7 +51,7 @@
                                 <td>@item.Fecha</td>
                                 <td>
                                     <a asp-action="Editar" asp-controller="MantenedorExcluidos" class="btn btn-success btn-sm" asp-route-idExcluidos="@item.IdExcluidos">Editar</a>
-                                    <a asp-action="Eliminar" asp-controller="MantenedorExcluidos" class="btn btn-danger btn-sm" asp-route-idExcluidos="@item.IdExcluidos">Eliminar</a>
+                                    <a asp-action="Eliminar" asp-controller="MantenedorExcluidos" class="btn btn-danger btn-sm" asp-route-id_add="@item.IdExcluidos">Eliminar</a>
                                 </td>
                             </tr>
                         }
