--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -5,8 +5,15 @@
     ViewData["Title"] = "Incluidos";
 }
 
-
-
+@*<form asp-action="" asp-controller="" method="post" enctype="multipart/form-data">
+    @if (Model.Subido) { }
+</form>
+*@
+<div class="text-center">
+    <h1 class="display-4">@ViewData["Title"]</h1>
+    <div class="Espacio-Container"></div>
+        <div class="BotonCargar-Container">
+        </div>
         <form asp-controller="MantenedorIncluidos" method="post" class="row g-3" style="display: flex; justify-content: center; align-items: center; position: relative; bottom:11px;" asp-action="" asp-controller="" enctype="multipart/form-data">
             <div class="col-auto">
                 <label for="LabelBuscar2" class="visually-hidden">Buscar por: </label>
@@ -30,10 +37,10 @@
             <div class="col-auto" style="position: relative; top: 8px;">
                 <button type="submit" class="btn btn-warning mb-3" asp-action="Guardar">Insertar nuevo registro</button>
             </div>
-            <div class="col-auto" style="position: relative; top: 8px;">
-                <button type="submit" class="btn btn-secondary mb-3">Generar arhivo .txt</button>
-            </div>
         </form>
+    <div class="col-auto">
+        <a class="btn btn-success" href="/SubirArchivo/Subir" style="margin:15px">Subir Archivo .txt</a>
+    </div>
         <div class="card">
             <div class="card-body">
                 <table class="table">
@@ -66,5 +73,9 @@
                     </tbody>
                 </table>
             </div>
-            <a href="/Home/index" style="text-decoration:none; text-decoration:none; position: relative; bottom:5px;"><button class="btn btn-warning">Volver al menu principal</button></a>
+                <a href="/Home/index" style="text-decoration:none; display:flex; justify-content:center; position: relative; bottom:5px;"><button class="btn btn-warning">Volver al menu principal</button></a>
+        <div class="col-auto" style="position: relative; top: 8px; left:555px; ">
+            <button type="submit" class="btn btn-success mb-3">Generar arhivo .txt</button>
         </div>
+        </div>
+</div>
