--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -39,7 +39,7 @@
             </div>
         </form>
     <div class="col-auto">
-        <a class="btn btn-success" href="/SubirArchivo/Subir" style="margin:15px">Subir Archivo .txt</a>
+        <a class="btn btn-success" href="/SubirArchivo/listar" style="margin:15px">Subir Archivo .txt</a>
     </div>
         <div class="card">
             <div class="card-body">
