--- a/Views/SubirArchivo/listar.cshtml
+++ b/Views/SubirArchivo/listar.cshtml
@@ -38,8 +38,8 @@
             <thead>
                 <tr>
                         <th scope="col">Cedula</th>
-                        <th scope="col">Apellidos</th>
-                        <th scope="col">Nombres</th>
+                        <th scope="col">Apellido</th>
+                        <th scope="col">Nombre</th>
                         <th scope="col">Sub</th>
                         <th scope="col">Monto</th>
                         <th scope="col">Fecha</th>
