--- a/Views/MantenedorExcluidos/Listar.cshtml
+++ b/Views/MantenedorExcluidos/Listar.cshtml
@@ -29,7 +29,7 @@
                 <button type="submit" class="btn btn-primary mb-3" asp-action="Buscar">Buscar</button>
             </div>
             <div class="col-auto" style="position: relative; top: 8px;">
-                <button type="submit" class="btn btn-warning mb-3" asp-action="Guardar">Insertar nuevo registro</button>
+                <a class="btn btn-warning mb-3" asp-action="Guardar" asp-controller="MantenedorExcluidos">Insertar nuevo registro</a>
             </div>
         </form>
         <div class="card">
