--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -1,14 +1,9 @@
-﻿@model IEnumerable<ClassAdd>
-
+﻿@model PaginacionRespuesta<ClassAdd>
 
 @{
     ViewData["Title"] = "Incluidos";
 }
 
-@*<form asp-action="" asp-controller="" method="post" enctype="multipart/form-data">
-    @if (Model.Subido) { }
-</form>
-*@
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
     <div class="Espacio-Container"></div>
@@ -23,6 +18,7 @@
         <div class="col-auto">
             <label class="visually-hidden">Cedula</label>
             <input type="text" class="form-control" id="cedula_id" name="cedula" placeholder="Cedula">
+             
         </div>
         <div class="col-auto">
             <label class="visually-hidden">Nombre</label>
@@ -56,7 +52,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
+                    @foreach (var item in Model.Elementos)
                     {
                         <tr>
                             <td>@item.Cedula_add</td>
@@ -80,3 +76,5 @@
         </div>
     </div>
 </div>
+
+<partial name="_Paginacion" /> 
