--- a/Views/MantenedorExcluidos/Listar.cshtml
+++ b/Views/MantenedorExcluidos/Listar.cshtml
@@ -15,11 +15,11 @@
             </div>
             <div class="col-auto">
                 <label for="Cedula" class="visually-hidden">Cedula</label>
-                <input type="text" class="form-control" name="cedula" placeholder="Cedula">
+                <input type="text" class="form-control" name="cedula" placeholder="Cedula" required>
             </div>
             <div class="col-auto">
                 <label for="Motivo" class="visually-hidden">Motivo</label>
-                <input type="text" class="form-control" name="motivo" placeholder="Motivo">
+                <input type="text" class="form-control" name="motivo" placeholder="Motivo"> 
             </div>
             <div class="col-auto">
                 <label for="Fecha" class="visually-hidden">Fecha</label>
