--- a/Views/SubirArchivo/listar.cshtml
+++ b/Views/SubirArchivo/listar.cshtml
@@ -23,6 +23,7 @@
             </div>
             <div class="card-footer d-flex justify-content-start">
                 <button type="submit" class="btn btn-success">Enviar</button>
+                <a class="btn btn-warning" href="/MantenedorIncluidos/Listar">Volver</a>
             </div>
         </form>
     </div>
@@ -81,13 +82,12 @@
     <div class="card-footer d-flex justify-content-end">
         <button class=" btn btn-warning" onclick="sendTable()"> Guardar Registros </button>
     </div>
+    
 }
 
 else
 {
-    <h1>
-        Seleccione un archivo con registros para mostrar
-    </h1>
+   
 }
 
 <script>
