--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,3 +20,7 @@
         </div>
     </div>
 </div>
+
+<link href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.css">
+
+<script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.js"></script>
