--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -21,11 +21,11 @@
         </div>
         <div class="col-auto">
             <label class="visually-hidden">Nombre</label>
-            <input name="nombre" type="text" class="form-control" id="nombre_id" placeholder="Nombre" required>
+            <input name="nombre" type="text" class="form-control" id="nombre_id" placeholder="Nombre">
         </div>
         <div class="col-auto">
             <label class="visually-hidden">Apellido</label>
-            <input name="apellido" type="text" class="form-control" id="apellido_id" placeholder="Apellido" required>
+            <input name="apellido" type="text" class="form-control" id="apellido_id" placeholder="Apellido">
         </div>
         <div class="col-auto" style="position: relative; top: 8px;">
             <button type="submit" class="btn btn-primary mb-3" asp-action="Buscar">Buscar</button>
@@ -39,7 +39,7 @@
     </div>
     <div class="card">
         <div class="card-body">
-            <table class="table">
+            <table class="table" id="myTable">  
                 <thead>
                     <tr>
                         <th>Cedula</th>
