--- a/Views/MantenedorIncluidos/Listar.cshtml
+++ b/Views/MantenedorIncluidos/Listar.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Incluidos";
 }
 
+@section Estilos{
+    <link href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css" rel="stylesheet" />
+}
+
 <div class="text-center">
     <h1 class="display-4">@ViewData["Title"]</h1>
     <div class="Espacio-Container"></div>
@@ -33,13 +37,17 @@
         <div class="col-auto" style="position: relative; top: 8px;">
             <a class="btn btn-warning mb-3" asp-controller="MantenedorIncluidos" asp-action="Guardar">Insertar nuevo registro</a>
         </div>
+        <div class="col-auto" style="margin:15px">
+            <button class="btn btn-warning" asp-controller="MantenedorIncluidos" asp-action="Limpiar">Limpiar Registro</button>
+        </div>
     </form>
     <div class="col-auto">
         <a class="btn btn-success" href="/SubirArchivo/listar" style="margin:15px">Subir Archivo .txt</a>
     </div>
+
     <div class="card">
         <div class="card-body">
-            <table class="table" id="myTable">  
+            <table id="example" class="table" style="width:100%">
                 <thead>
                     <tr>
                         <th>Cedula</th>
@@ -50,7 +58,7 @@
                         <th>Fecha</th>
                     </tr>
                 </thead>
-                <tbody>
+                @*<tbody>
                     @foreach (var item in Model.Elementos)
                     {
                         <tr>
@@ -66,7 +74,7 @@
                             </td>
                         </tr>
                     }
-                </tbody>
+                </tbody>*@
             </table>
         </div>
         <a href="/Home/index" style="text-decoration:none; display:flex; justify-content:center; position: relative; bottom:5px;"><button class="btn btn-warning">Volver al menu principal</button></a>
@@ -76,4 +84,7 @@
     </div>
 </div>
 
-<partial name="_Paginacion" /> 
+@section scripts{
+    <link src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js" />
+    <script src="~/lib/dt/dtlistar.js"></script>
+ }
